gac_sb/objects/INNOcontroleQualite__c.object
<CustomObject>
    <fields>
        <fullName>AuditNoAudit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pas d&apos;audit</inlineHelpText>
        <label>Audit - Pas d&apos;audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIInoValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pas de valo CII</inlineHelpText>
        <label>CII - Pas de valo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIRnoValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pas de valo CIR</inlineHelpText>
        <label>CIR - Pas de valo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DJnoDossierJustificatif__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pas de dossier justificatif</inlineHelpText>
        <label>DJ - Pas de dossier justificatif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission CIR</label>
        <referenceTo>INNOmission__c</referenceTo>
        <relationshipName>INNOcontroleQualite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prod_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Prod Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>auditAnterioriteHistorique__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Historique des contrôles fiscaux</inlineHelpText>
        <label>Audit - Connaissance historique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditAnteriorite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dossiers justificatifs</inlineHelpText>
        <label>Audit - Connaissance dossiers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAgrement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Agrément</inlineHelpText>
        <label>Audit - Agrément</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A &amp; S</inlineHelpText>
        <label>Audit - A &amp; S</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAutreDetail__c</fullName>
        <inlineHelpText>Si oui, préciser</inlineHelpText>
        <label>Audit - Autres identification Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditCrossUpAutre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Autres</inlineHelpText>
        <label>Audit - Autres identification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpFiscalite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fiscalité locale</inlineHelpText>
        <label>Audit - Fiscalité locale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpJei__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>JEI / CIJV / CI Collection</inlineHelpText>
        <label>Audit - JEI / CIJV / CI Collection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpPropriete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Propriété intellectuelle</inlineHelpText>
        <label>Audit - Propriété intellectuelle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditCrossUpTAT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TAT / ACS</inlineHelpText>
        <label>Audit - TAT / ACS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditElementFinancierDetail__c</fullName>
        <inlineHelpText>Si non, préciser la date prévue</inlineHelpText>
        <label>Audit - Eléments financier Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditElementFinancier__c</fullName>
        <inlineHelpText>Récupération d&apos;éléments financiers dès la fin de l&apos;audit</inlineHelpText>
        <label>Audit - Eléments financiers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditElementTechniqueDetail__c</fullName>
        <inlineHelpText>Si non, préciser la date prévue</inlineHelpText>
        <label>Audit - Eléments techniques Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditElementTechnique__c</fullName>
        <inlineHelpText>Récupération d&apos;éléments techniques dès la fin de l&apos;audit</inlineHelpText>
        <label>Audit - Eléments techniques</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditEnjeuxMontant__c</fullName>
        <inlineHelpText>Si oui, préciser combien</inlineHelpText>
        <label>Audit - Enjeux CIR/CII Montant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>auditEnjeux__c</fullName>
        <inlineHelpText>Estimation des enjeux CIR/CII</inlineHelpText>
        <label>Audit - Enjeux CIR/CII</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pas d&apos;enjeu</fullName>
                </value>
                <value>
                    <fullName>Oui</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditIdentificationClient__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identification de l&apos;ensemble des interlocuteurs clients</inlineHelpText>
        <label>Audit - Identification clients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditIdentificationGAC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identification de l&apos;ensemble des interlocuteurs GAC</inlineHelpText>
        <label>Audit - Identification GAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditMajChamps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise à jour des champs relatifs à l&apos;audit dans la fiche mission</inlineHelpText>
        <label>Audit - Maj champs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu à ton Audit ? ( / 5)</inlineHelpText>
        <label>Audit - Note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditPerimetreAutreDetail__c</fullName>
        <inlineHelpText>Si oui, préciser</inlineHelpText>
        <label>Audit - Périmètre Détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditPerimetreAutre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Autres</inlineHelpText>
        <label>Audit - Autre périmètre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreEtude__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Bureau d&apos;étude</inlineHelpText>
        <label>Audit - Bureau d&apos;étude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Maintenance</inlineHelpText>
        <label>Audit - Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreMarketing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marketing</inlineHelpText>
        <label>Audit - Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreQualite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualité / méthodes et process</inlineHelpText>
        <label>Audit - Qualité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreRd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Service R&amp;D / Laboratoire</inlineHelpText>
        <label>Audit - Service R&amp;D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPerimetreSi__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Système d&apos;info</inlineHelpText>
        <label>Audit - Système d&apos;info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPlanificationDeadline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Planification de l&apos;ensemble des deadlines de la mission</inlineHelpText>
        <label>Audit - Planification Deadlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auditPointageDetail__c</fullName>
        <inlineHelpText>Si oui, préciser lesquels</inlineHelpText>
        <label>Audit - Pointage détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditPointage__c</fullName>
        <inlineHelpText>Y-a-t-il du personnel qui ne pointe pas</inlineHelpText>
        <label>Audit - Pointage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>auditSuiviDetail__c</fullName>
        <inlineHelpText>Si non, préciser la solution prévue</inlineHelpText>
        <label>Audit - Suivi de temps détail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>auditSuivi__c</fullName>
        <inlineHelpText>Existence d&apos;un suivi de temps</inlineHelpText>
        <label>Audit - Suivi de temps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oui</fullName>
                </value>
                <value>
                    <fullName>Non</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avancementAudit__c</fullName>
        <formula>(
if (auditPerimetreRd__c,1,0) + 
if (auditPerimetreEtude__c,1,0) + 
if (auditPerimetreQualite__c,1,0) +
if (auditPerimetreMaintenance__c,1,0) + 
if (auditPerimetreMarketing__c,1,0) + 
if (auditPerimetreSi__c,1,0) +
if (auditPerimetreAutre__c,1,0) + 
if (ISBLANK(TEXT(auditSuivi__c)),0,1) + 
if (ISBLANK(TEXT(auditPointage__c)),0,1) + 
if (OR(auditAnteriorite__c,auditAnterioriteHistorique__c),1,0) + 
if (ISBLANK(TEXT(auditElementFinancier__c)),0,1) + 
if (ISBLANK(TEXT(auditElementTechnique__c)),0,1) + 
if (auditPlanificationDeadline__c,1,0) +
if (auditIdentificationClient__c,1,0) +
if (auditIdentificationGAC__c,1,0) +
if (ISBLANK(TEXT(auditEnjeux__c)),0,1) +
if (auditMajChamps__c,1,0)
)
/17</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Avancement Check List Audit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>avancementCII__c</fullName>
        <formula>(
if (ciiPme__c,1,0) + 
if (ciiDepQualif__c,1,0) + 
if (ciiDepAffectation__c,1,0) + 
if (ciiDepTotal__c,1,0) + 
if (ciiDepTemps__c,1,0) + 
if (ciiDepStatut__c,1,0) + 
if (ciiDepSalaire__c,1,0) + 
if (ciiDepCharges__c,1,0) + 
if (ciiDepTaux__c,1,0) + 
if (ciiDepInteressement__c,1,0) + 
if (ciiDepAnterieures__c,1,0) + 
if (ciiDepRD__c,1,0) + 
if (ciiDot2013__c,1,0) + 
if (ciiDotDeduction__c,1,0) + 
if (ciiDotAffectation__c,1,0) + 
if (ciiDotTaux__c,1,0) + 
if (ciiDotNeuf__c,1,0) + 
if (ciiRdAgree__c,1,0) + 
if (ciiRdValo__c,1,0) + 
if (ciiRdFactureDate__c,1,0) + 
if (ciiRdFactureMontant__c,1,0) + 
if (ciiBre__c,1,0) + 
if (ciiBreFactureDate__c,1,0) + 
if (ciiBreFactureMontant__c,1,0) + 
if (ciiTotal400k__c,1,0) + 
if (ciiTotalCoherenceInno__c,1,0) + 
if (ciiSubPercues__c,1,0) + 
if (ciiSubRemboursees__c,1,0) + 
if (ciiSubAnneePerception__c,1,0) + 
if (ciiSubAnneeDepense__c,1,0) + 
if (ciiSubNature__c,1,0) + 
if (ciiSubSousTraitant__c,1,0) + 
if (ciiSubCabinet__c,1,0) + 
if (ciiTotal80k__c,1,0) + 
if (ciiTotalCoherence__c,1,0) + 
if (ciiTotalProjet__c,1,0) + 
if (ciiCerfa__c,1,0) + 
if (ciiMajChamps__c,1,0) 
) 
/38</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Avancement Check List Valo CII</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>avancementCIR__c</fullName>
        <formula>( 
if (cirPersonnelQualifTechnique__c,1,0) + 
if (cirPersonnelJustifImplantation__c,1,0) + 
if (cirPersonnelVerifJustificat__c,1,0) + 
if (cirPersonnelIdentPersonnel__c,1,0) + 
if (cirPersonnelAffectPersonnel__c,1,0) + 
if (cirPersonnelNonPointants__c,1,0) + 
if (cirPersonnelPresenceIngenieur__c,1,0) + 
if (cirPersonnelTempsTravail__c,1,0) + 
if (cirPersonnelDate__c,1,0) + 
if (cirPersonnelSalaire__c,1,0) + 
if (cirPersonnelCharge__c,1,0) + 
if (cirPersonnelTauxCharge__c,1,0) + 
if (cirPersonnelInteressement__c,1,0) + 
if (cirPersonnelAnterieur__c,1,0) + 
if (cirPersonnelRD__c,1,0) + 
if (cirDotMaterielNeuf__c,1,0) + 
if (cirDotDeductible__c,1,0) + 
if (cirDotProjetValo__c,1,0) + 
if (cirDotTauxDotation__c,1,0) + 
if (cirDotCreditBail__c,1,0) + 
if (cirDotAnnuite__c,1,0) + 
if (cirDotAnterieur__c,1,0) + 
if (cirDotSpecifique__c,1,0) + 
if (cirExtEuropeen__c,1,0) + 
if (cirExtPublic__c,1,0) + 
if (cirExtPrive__c,1,0) + 
if (cirExtProjetValo__c,1,0) + 
if (cirExtJustifPrestation__c,1,0) + 
if (cirExtDependance__c,1,0) + 
if (cirExtRenonciation__c,1,0) + 
if (cirExtFactureLibelle__c,1,0) + 
if (cirExtFactureDate__c,1,0) + 
if (cirExtFactureMontantHT__c,1,0) + 
if (cirExtAnterieur__c,1,0) + 
if (cirExtPlafond__c,1,0) + 
if (cirVeilleNature__c,1,0) + 
if (cirVeilleProjetValo__c,1,0) + 
if (cirVeilleAnterieur__c,1,0) + 
if (cirVeillePlafond__c,1,0) + 
if (cirNormaEligible__c,1,0) + 
if (cirNormaTempsPreparation__c,1,0) + 
if (cirNormaJustif__c,1,0) + 
if (cirNormaAnterieur__c,1,0) + 
if (cirBrevetPrise__c,1,0) + 
if (cirBrevetDefense__c,1,0) + 
if (cirBrevetAmortissement__c,1,0) + 
if (cirBrevetFactureDate__c,1,0) + 
if (cirBrevetFactureMontantHT__c,1,0) + 
if (cirBrevetAnterieur__c,1,0) + 
if (cirRDAnterieur__c,1,0) + 
if (cirSubvRD__c,1,0) + 
if (cirSubvDeduite__c,1,0) + 
if (cirSubvAnnee__c,1,0) + 
if (cirSubvMontant__c,1,0) + 
if (cirSubvNature__c,1,0) + 
if (cirSubvThesard__c,1,0) + 
if (cirSubvAgree__c,1,0) + 
if (cirSubvCabinetRemu__c,1,0) + 
if (cirSubvCabinetDeduction__c,1,0) + 
if (cirSubvAnterieur__c,1,0) + 
if (cirTotalAnterieur__c,1,0) + 
if (cirTotalProjetValo__c,1,0) + 
if (cirCerfaFait__c,1,0) + 
if (cirCerfaPJ__c,1,0) + 
if (cirMajChamps__c,1,0)
)
/65</formula>
        <label>% Avancement Check List Valo CIR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>avancementDossiers__c</fullName>
        <formula>( 
if (dotProjetValo__c,1,0) + 
if (dotMatrice__c,1,0) + 
if (dotIndicateurs__c,1,0) + 
if (ISBLANK(TEXT(dotIndicateursListe__c)),0,1) + 
if (dotRelecture__c,1,0) + 
if (dotDJ__c,1,0) + 
if (dotQualite__c,1,0) + 
if (dotVerrou__c,1,0) + 
if (dotRegroupements__c,1,0) + 
if (OR(dotRegroupementsNo__c,dotRegroupementsYes__c),1,0) + 
if (dotHeuresProjet__c,1,0) + 
if (dotDescription__c,1,0) + 
if (dotAnnexes__c,1,0) + 
if (dotPj__c,1,0) + 
if (dofPresentation__c,1,0) + 
if (dofProjetValo__c,1,0) + 
if (dofMatrice__c,1,0) + 
if (dofAnnexes__c,1,0) + 
if (dofMajChamps__c,1,0)
) 
/19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Avancement Check List Dossiers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>avancementGlobal__c</fullName>
        <label>% Avancement global</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ciiBreFactureDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Date de la facture spécifiée</inlineHelpText>
        <label>CII - Brevets : Date facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiBreFactureMontant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Montant HT indiqué</inlineHelpText>
        <label>CII - Brevets : Montant HT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiBre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>S&apos;agit-il bien de la prise, maintenance et/ou défense de brevets ?</inlineHelpText>
        <label>CII - Brevets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiCerfa__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fait</inlineHelpText>
        <label>CII - Cerfa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepAffectation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Affectation du personnel à la réalisation d&apos;opérations de conception de prototypes / installations pilotes de nouveaux produits</inlineHelpText>
        <label>CII - Affectation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepAnterieures__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CII - Années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepCharges__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Retraitement des charges sociales</inlineHelpText>
        <label>CII - Charges sociales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepInteressement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte de l&apos;intéressement / Participation</inlineHelpText>
        <label>CII - Interessement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepQualif__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualification technique du personnel et récupération du diplôme correspondant</inlineHelpText>
        <label>CII - Qualif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepRD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la cohérence du taux R&amp;D de la personne valorisée par rapport à sa fonction</inlineHelpText>
        <label>CII - RD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepSalaire__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte du salaire brut annuel</inlineHelpText>
        <label>CII - Salaire brut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepStatut__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contrôle des dates entrée / sortie / changement de statut du personnel</inlineHelpText>
        <label>CII - Statut personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepTaux__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence du taux de charges affecté au personnel</inlineHelpText>
        <label>CII - Taux de charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepTemps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contrôle des valeurs du temps de travail effectif  du personnel</inlineHelpText>
        <label>CII - Temps de travail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDepTotal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si CIR + CII, vérifier que le total des heures des personnes n&apos;est pas supérieur à 100%</inlineHelpText>
        <label>CII - Total 100%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDot2013__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Les biens ont-ils bien été créés ou acquis à compter du 1er janvier 2013 ?</inlineHelpText>
        <label>CII - 2013</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDotAffectation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chaque dotation est-elle bien affectée à la réalisation d&apos;opérations de conception de prototypes / installations pilotes de nouveaux produits (matériaux / locaux) ?</inlineHelpText>
        <label>CII - Dotation affectation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDotDeduction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Les dotations sont-elles fiscalement déductibles ?</inlineHelpText>
        <label>CII - Dotation déduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDotNeuf__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que le matériel est acquis à l&apos;état neuf</inlineHelpText>
        <label>CII - Matériel neuf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiDotTaux__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sait-on justifier le taux d&apos;affectation des dotations ?</inlineHelpText>
        <label>CII - Dotation taux</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiMajChamps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise à jour des champs relatifs à l&apos;audit dans la fiche mission</inlineHelpText>
        <label>CII - Maj champs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu à ta Valo ? ( / 5)</inlineHelpText>
        <label>CII - Note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ciiPme__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Statut de PME au sens communautaire</inlineHelpText>
        <label>CII - PME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiRdAgree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prestations confiées à des entreprises ou bureaux d&apos;études ou d&apos;ingénierie agréés CII</inlineHelpText>
        <label>CII - Agréés</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiRdFactureDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Date de la facture spécifiée</inlineHelpText>
        <label>CII - Recherche : Date facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiRdFactureMontant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Montant HT indiqué</inlineHelpText>
        <label>CII - Recherche : Montant HT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiRdValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sait-on relier chaque prestation aux projets valorisés ? Justification de l&apos;enjeu de la prestation sous-traité dans le cadre du déroulé du projet</inlineHelpText>
        <label>CII - Projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiSubAnneeDepense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification du montant par rapport aux dépenses engagées</inlineHelpText>
        <label>CII - Année dépenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiSubAnneePerception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification de l&apos;année de perception de la subvention</inlineHelpText>
        <label>CII - Année perception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiSubCabinet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Déduction des honoraires du cabinet de conseil</inlineHelpText>
        <label>CII - Cabinet conseil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiSubNature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la nature de la subvention</inlineHelpText>
        <label>CII - Nature subvention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiSubPercues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subventions publiques perçues (à déduire) : il s&apos;agit bien d&apos;une subvention liée au projet d’innovation</inlineHelpText>
        <label>CII - Percues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiSubRemboursees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subventions publiques remboursées (à réintégrer)</inlineHelpText>
        <label>CII - Remboursées</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiSubSousTraitant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pour les sous-traitants : vérification des montants des sommes encaissées pour les travaux d&apos;innovation confiés</inlineHelpText>
        <label>CII - Sous traitants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiTotal400k__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Plafonnement à 400 000 €</inlineHelpText>
        <label>CII - 400k</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiTotal80k__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Plafonnement à 80 000 €</inlineHelpText>
        <label>CII - 80k</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiTotalCoherenceInno__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence par rapport année N-1</inlineHelpText>
        <label>CII - Dépenses antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiTotalCoherence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence par rapport année N-1</inlineHelpText>
        <label>CII - Total cohérent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ciiTotalProjet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rattachement de l’ensemble des coûts de personnel, Dotations aux amortissements et Subventions à un projet donné</inlineHelpText>
        <label>CII - Rattachement projet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetAmortissement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dotations aux amortissements des brevets acquis</inlineHelpText>
        <label>CIR - Brevets amortissement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Brevet années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetDefense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>En cas de défense de brevets : prise en compte du  temps de personnel (cf. dépenses de personnel)</inlineHelpText>
        <label>CIR - Défense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetFactureDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Date de la facture spécifiée</inlineHelpText>
        <label>CIR - Brevet date facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetFactureMontantHT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Montant HT indiqué</inlineHelpText>
        <label>CIR - Brevet montant HT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirBrevetPrise__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>S&apos;agit-il bien de la prise, maintenance et/ou défense de brevets ?</inlineHelpText>
        <label>CIR - Prise brevets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirCerfaFait__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fait</inlineHelpText>
        <label>CIR - Cerfa fait</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirCerfaPJ__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PJ ajoutée dans IA</inlineHelpText>
        <label>CIR - Cerfa PJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotAnnuite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que la valeur retenue correspond bien à l&apos;annuité de l&apos;exercice concerné ?</inlineHelpText>
        <label>CIR - Annuité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Dotations années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotCreditBail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>En cas de Crédit-Bail, as-tu récupéré les attestations relatives (à joindre en annexe de la déclaration CERFA) ?</inlineHelpText>
        <label>CIR - Crédit-Bail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotDeductible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Les dotations sont-elles fiscalement déductibles ?</inlineHelpText>
        <label>CIR - Dotations déductibles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotDerogation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Régimes dérogatoires (suramortissement, autres, …)</inlineHelpText>
        <label>CIR - Dérogation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotFusion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Régime de fusion - acquisition</inlineHelpText>
        <label>CIR - Fusion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotMaterielNeuf__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Acquisition du matériel à l&apos;état neuf</inlineHelpText>
        <label>CIR - Matériel neuf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chaque dotation est-elle bien reliée à un projet de recherche valorisé ?</inlineHelpText>
        <label>CIR - Dotation sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotSinistre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Dotations en cas de sinistre</inlineHelpText>
        <label>CIR - Sinistre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirDotSpecifique__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cas Spécifiques</inlineHelpText>
        <label>CIR - Cas spécifiques</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>